# SumArrays

./: CMakeLists.txt  CREDITS  README.md  config.m4  config.w32  numphp.c  numphp.php  php_numphp.h
tests/: 001.phpt
